--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "vue-parse",
-    "version": "0.0.3",
+    "version": "0.0.4",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
     "license": "MIT",
@@ -50,5 +50,9 @@
             "json",
             "node"
         ]
-    }
+    },
+    "keywords": [
+        "vue",
+        "parse"
+    ]
 }
