--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "name": "vue-parse",
-    "version": "0.0.4",
+    "version": "0.0.5",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
+    "description": "Vue + Parse",
     "license": "MIT",
     "files": [
         "lib"
