--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "ts-jest": "^24.0.1",
         "typescript": "^3.4.1",
         "vue-jest": "^3.0.4",
+        "vue-property-decorator": "^8.1.1",
         "vue-template-compiler": "^2.6.10",
         "vuepress": "^0.14.10"
     },
